Bug Fix - Fixed line wrap on logCommand

--- a/console/css/basicTerminal.css
+++ b/console/css/basicTerminal.css
@@ -34,6 +34,7 @@ body{
   width: 100%;
   margin: 0%;
   padding: 0%;
+  overflow-wrap: break-word;
 }
 
 #consoleLog pre{
